WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49515
[Qt] Focus ring does not show on focused links.
https://bugs.webkit.org/show_bug.cgi?id=49515
Summary
[Qt] Focus ring does not show on focused links.
Yael
Reported
2010-11-14 14:40:00 PST
After
http://trac.webkit.org/changeset/69766
the focus ring on links is no longer visible in Qt. The reason is that Qt always returned true in RenderTheme::supportsFocusRing(), but until
r69766
, we did not check that for links. Qt draws its own focus ring for controls that it draws, but not for links. A patch is coming soon.
Attachments
Patch
(23.79 KB, patch)
2010-11-14 14:53 PST
,
Yael
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2010-11-14 14:53:53 PST
Created
attachment 73858
[details]
Patch RenderTheme::supportsFocusRing should check the style appearance before it decides if to return true or false.
Antonio Gomes
Comment 2
2010-11-14 16:15:53 PST
Comment on
attachment 73858
[details]
Patch It would be nice if Ossy could check it on the bots, so it does not fail due to font differences.
Yael
Comment 3
2010-11-14 16:39:51 PST
Antonio, thanks for the review. Ossy, could you please check that? thanks,
Csaba Osztrogonác
Comment 4
2010-11-15 04:59:51 PST
(In reply to
comment #3
)
> Antonio, thanks for the review. > Ossy, could you please check that? > thanks,
Done, it works for me. Next time you can check it yourself with our Q-BAT:
http://webkit.sed.hu/blog/20101028/qtwebkit-builder-and-tester-virtual-machine
Csaba Osztrogonác
Comment 5
2010-11-15 05:00:07 PST
Comment on
attachment 73858
[details]
Patch cq+
Yael
Comment 6
2010-11-15 05:15:59 PST
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Antonio, thanks for the review. > > Ossy, could you please check that? > > thanks, > > Done, it works for me. Next time you can check it yourself with our Q-BAT: >
http://webkit.sed.hu/blog/20101028/qtwebkit-builder-and-tester-virtual-machine
Thanks, Ossy.
WebKit Commit Bot
Comment 7
2010-11-15 05:32:35 PST
Comment on
attachment 73858
[details]
Patch Clearing flags on attachment: 73858 Committed
r72004
: <
http://trac.webkit.org/changeset/72004
>
WebKit Commit Bot
Comment 8
2010-11-15 05:32:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug