2010-11-15  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] Focus ring does not show on focused links.
        https://bugs.webkit.org/show_bug.cgi?id=49515

        * platform/qt/fast/inline/inline-focus-ring-expected.checksum: Added.
        * platform/qt/fast/inline/inline-focus-ring-expected.png: Added.
        * platform/qt/fast/inline/inline-focus-ring-expected.txt: Added.
2010-11-15  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] Focus ring does not show on focused links.
        https://bugs.webkit.org/show_bug.cgi?id=49515

        After http://trac.webkit.org/changeset/69766 the focus ring on links is no longer
        visible in Qt.
        The reason is that Qt always returned true in RenderTheme::supportsFocusRing(),
        but until r69766, we did not check that for links. Qt draws its own focus ring
        for controls that it draws, but not for links.
        Change the return value to false if the style's appearance is not something that Qt
        draws by itself or does not support.
        Added a Qt specific test result for the new test added in r69766.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::supportsFocusRing):

Canonical link: https://commits.webkit.org/62475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72004 268f45cc-cd09-0410-ab3c-d52691b4dbfc